# opengl_boilerplate

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  opengl_boilerplate.sln  opengl_boilerplate.vcxproj  opengl_boilerplate.vcxproj.filters
cmake/: FindASSIMP.cmake  FindEigen3.cmake  FindGLFW3.cmake  FindGLM.cmake
ext/glad/: glad.c
ext/imgui/: CMakeLists.txt
ext/include/glad/: glad.h
ext/lib/: glfw3.lib
res/: vertex.glsl
res/anchors/: armadillo_anchor.txt  hand_anchor.txt
res/shaders/: fragment.glsl  vertex.glsl
src/: CMakeLists.txt  camera.hpp  main.cpp  mesh.cpp  mesh.hpp  meshfairing.cpp  meshfairing.hpp  scene.hpp  shader.hpp  vertex.glsl
src/backends/: CMakeLists.txt
src/boilerplate/: CMakeLists.txt  camera.cpp  camera.hpp  mesh.cpp  mesh.hpp  scene.cpp  scene.hpp  shader.cpp
